examples/test/testpolicy10391.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10391
  namespace: namespace97
spec:
  podSelector:
    matchLabels:
      key25: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value0
          key11: value49
      podSelector:
        matchLabels:
          key0: value18
          key43: value22
